2019-10-21  Ola Jeppsson  <ola.jeppsson@gmail.com>

	* epiphany-elf-sim.py.in (DUMMY_PROGRAM): Add script directory as
	fall-back path for 'epiphany-elf-sim-dummy'.

2019-10-14  Ola Jeppsson  <ola.jeppsson@gmail.com>

	* Makefile.in (EPIPHANY_OBJS): Add profile.o
	* epiphany-sim.h (epiphany_init_insn_cycles): Remove.
	(epiphany_record_insn_cycles): Remove.
	(PROFILE_COUNT_FILLNOPS): Remove.
	(PROFILE_COUNT_SHORTINSNS): Remove.
	(PROFILE_COUNT_LONGINSNS): Remove.
	(EIT_RESET_ADDR): Remove.
	(EIT_SW_EXCEPTION_ADDR): Remove.
	(EIT_INTERRUPT_HIGH_ADDR): Remove.
	(EIT_INTERRUPT_LOW_ADDR): Remove.
	(TRAP_SYSCALL): Remove.
	(TRAP_BREAKPOINT): Remove.
	(EPIPHANY_DEVICE_ADDR): Remove.
	(EPIPHANY_DEVICE_LEN): Remove.
	* epiphany.c (epiphanybf_model_insn_before): Rewrite and move to
	profile.c.
	(epiphanybf_model_insn_after): Likewise.
	(epiphanybf_model_epiphany32_d_u_exec): Likewise
	(epiphanybf_model_epiphany32_u_exec): Likewise.
	* profile.c: New file.
	* profile.h: New file.
	* sim-if.c (print_epiphany_misc_cpu): Rewrite and move to profile.c.
	(sim_open): Adjust CPU_EPIPHANY_MISC_PROFILE to CPU_EPIPHANY_PROFILE.
	* sim-main.h (CPU_EPIPHANY_MISC_PROFILE): Rename to ...
	(CPU_EPIPHANY_PROFILE): ... this.

2019-03-25  Ola Jeppsson  <ola@adapteva.com>

	* arch.c: Regenerated.
	* arch.h: Regenerated.
	* cpu.c: Regenerated.
	* cpu.h: Regenerated.
	* cpuall.h: Regenerated.
	* decode.c: Regenerated.
	* decode.h: Regenerated.
	* model.c: Regenerated.
	* sem-switch.c: Regenerated.
	* sem.c: Regenerated.

2019-03-24  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (epiphany_user_init): Set LOADER_BSS_CLEARED_FLAG in
	target binary __loader_flags.

2019-02-10  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_model_insn_after): Remove dead code. Fix
	name of function argument.

2019-02-10  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (sim_open): Initialize sd->orig_cpu to NULL.
	(epiphany_sim_close): Null check sd->orig_cpu before doing
	anything.
